<resources>
    <string name="app_name">CligenceLBS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email*</string>
    <string name="name">Name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="department">Department*</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password**</string>
    <array name="productImage">
        <item>@drawable/user_ic</item>
        <item>@drawable/add_friend_ic</item>
        <item>@drawable/view_sub_report_ic</item>
        <item>@drawable/download_app_ic</item>
        <item>@drawable/reset_password_ic</item>
        <item>@drawable/logout_ic</item>
    </array>
    <array name="productName">
        <item>Profile</item>
        <item>Add Sub User</item>
        <item>View Sub Report</item>
        <item>Download LBS</item>
        <item>Change Password</item>
        <item>logout</item>
    </array>
</resources>