<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <include
            android:id="@+id/log"
            layout="@layout/logo_layout" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_100sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/log">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/custom_circuler_background" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameEV"
                    style="@style/simpleText"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/name"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/emailEV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailEV"
                    style="@style/emailST"
                    android:layout_width="0dp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/email"
                    android:lines="1"
                    android:maxLength="25"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/numberEV"
                    app:layout_constraintEnd_toEndOf="@id/nameEV"
                    app:layout_constraintStart_toStartOf="@id/nameEV"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/numberEV"
                    style="@style/number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/mobile_number"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/departmentEV"
                    app:layout_constraintEnd_toEndOf="@+id/nameEV"
                    app:layout_constraintStart_toStartOf="@+id/nameEV" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/departmentEV"
                    style="@style/simpleText"
                    android:layout_width="0dp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/department"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/stateEV"
                    app:layout_constraintEnd_toEndOf="@+id/nameEV"
                    app:layout_constraintStart_toStartOf="@+id/nameEV"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/stateEV"
                    style="@style/simpleText"
                    android:layout_width="0dp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/state"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/cityEV"
                    app:layout_constraintEnd_toEndOf="@+id/nameEV"
                    app:layout_constraintStart_toStartOf="@+id/nameEV" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/cityEV"
                    style="@style/simpleText"
                    android:layout_width="0dp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/city"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"

                    app:layout_constraintBottom_toTopOf="@id/passwordEV"
                    app:layout_constraintEnd_toEndOf="@id/nameEV"
                    app:layout_constraintStart_toStartOf="@id/nameEV"

                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEV"
                    style="@style/password"
                    android:layout_width="0dp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/password"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/confirm_passwordEV"
                    app:layout_constraintEnd_toEndOf="@id/nameEV"
                    app:layout_constraintStart_toStartOf="@id/nameEV" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confirm_passwordEV"
                    style="@style/password"
                    android:layout_width="0dp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/editview_white_underline"
                    android:hint="@string/confirm_password"
                    android:lines="1"
                    android:paddingVertical="@dimen/_7sdp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/loginTV"
                    app:layout_constraintEnd_toEndOf="@id/nameEV"
                    app:layout_constraintStart_toStartOf="@id/nameEV"

                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@drawable/login_button_bg"
                    android:paddingVertical="@dimen/_5sdp"
                    android:text="@string/signup"
                    android:textAlignment="center"
                    android:textColor="@color/appcolor"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/bottom_logo"
                    app:layout_constraintEnd_toEndOf="@id/nameEV"
                    app:layout_constraintStart_toStartOf="@id/nameEV" />

                <include
                    android:id="@+id/bottom_logo"
                    layout="@layout/bottom_logo_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>